# presidio-hardened-angellist

./: .gitignore  PRESIDIO-REQ.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  publish.yml
src/presidio_angellist/: __init__.py  cli.py  config.py  hardening.py  llm.py  models.py  notify.py  pipeline.py  rubric_config.py  store.py  watch.py
src/presidio_angellist/enrich/: __init__.py  web.py
src/presidio_angellist/intake/: __init__.py  csv.py  email.py  imap.py
src/presidio_angellist/triage/: __init__.py  memo.py  rubric.py
tests/: test_cli.py  test_client.py  test_config.py  test_enrich.py  test_hardening.py  test_imap.py  test_intake.py  test_intake_csv.py  test_llm.py  test_memo.py  test_models.py  test_notify.py  test_pipeline.py  test_rubric.py  test_store.py  test_watch.py
tests/fixtures/: deal_complete.eml  deal_growth.eml  deal_sparse.eml  deals.csv  rubric.json  weights.json
