[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "presidio-hardened-angellist"
version = "0.1.0"
description = "Presidio security-hardened Python toolkit for the AngelList Startup/Funding Data API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Presidio Security", email = "security@presidio.dev" }]
keywords = ["angellist", "startup", "funding", "api", "security", "hardening", "presidio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "requests>=2.28.0",
    "urllib3>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.15.10",
    "responses>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/presidio-v/presidio-hardened-angellist"
Repository = "https://github.com/presidio-v/presidio-hardened-angellist"
Issues = "https://github.com/presidio-v/presidio-hardened-angellist/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/presidio_angellist"]

[tool.ruff]
target-version = "py39"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM", "TCH"]
ignore = ["S101", "S603", "S607"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --tb=short -q"

[tool.coverage.run]
source = ["presidio_angellist"]

[tool.coverage.report]
fail_under = 90
show_missing = true
