[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "presidio-hardened-angellist"
version = "0.2.0"
description = "Presidio security-hardened deal-flow triage & due-diligence toolkit for early-stage AngelList syndicate deals"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Presidio Security", email = "security@presidio.dev" }]
keywords = [
    "angellist", "syndicate", "venture-capital", "deal-flow", "due-diligence",
    "triage", "pre-seed", "seed", "startup", "security", "hardening", "presidio",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "requests>=2.28.0",
    "urllib3>=2.0.0",
]

[project.scripts]
angeltriage = "presidio_angellist.cli:main"

[project.optional-dependencies]
llm = [
    "anthropic>=0.40.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "responses>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/presidio-v/presidio-hardened-angellist"
Repository = "https://github.com/presidio-v/presidio-hardened-angellist"
Issues = "https://github.com/presidio-v/presidio-hardened-angellist/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/presidio_angellist"]

[tool.ruff]
target-version = "py39"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM", "TCH"]
ignore = ["S101", "S603", "S607"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --tb=short -q"

[tool.coverage.run]
source = ["presidio_angellist"]

[tool.coverage.report]
fail_under = 90
show_missing = true
